syntax="proto3";

package v1;

option go_package="github.com/fajrirahmat/interview-aji/model;model";


enum CheckInOutType{
    IN = 0;
    OUT = 1;
}

message CheckInOutRequest{
    string identifier = 1;
    CheckInOutType type = 2;
    int64 location_id = 3;
}
message Location{
    int32 id = 1;
    string name = 2;
}

message ListLocation{
    repeated Location locations = 1;
}

message CheckInOutResponse{
    int64 id = 1;
    string checkinout_time = 2;
    CheckInOutType check_type = 3;
    Location location = 4;
}

message CheckInOutRecord{
    int64 id = 1;
    CheckInOutType checkinout_type = 2;
    Location location = 3;
}